--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2320,7 +2320,8 @@ p.intro-graf::first-line {
     font-variant-caps: small-caps;
 }
 
-.smallcaps-not > p.intro-graf::first-line {
+.smallcaps-not > p.intro-graf::first-line,
+.annotation > p.data-field.title.intro-graf::first-line {
 	font-variant-caps: normal;
 }
 
@@ -2480,18 +2481,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1720233030#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1720450359#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1720233030#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1720450359#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1720233030#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1720450359#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1720233030#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1720450359#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5524,7 +5525,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1720233030#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1720450359#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5705,7 +5706,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1720233030#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1720450359#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6153,7 +6154,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1720233030#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1720450359#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7106,7 +7107,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1720233030#question');
+    background-image: url('/static/img/icon/icons.svg?v=1720450359#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7316,7 +7317,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
 	content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-	background-image: url('/static/img/icon/icons.svg?v=1720233030#magnifying-glass-plus-light');
+	background-image: url('/static/img/icon/icons.svg?v=1720450359#magnifying-glass-plus-light');
 	background-size: 56px 56px;
 	background-origin: content-box;
 	background-repeat: no-repeat;
@@ -7698,7 +7699,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1720233030#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1720450359#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7777,7 +7778,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted > :first-child::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1720233030#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1720450359#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
