--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -2320,7 +2320,8 @@ p.intro-graf::first-line {
     font-variant-caps: small-caps;
 }
 
-.smallcaps-not > p.intro-graf::first-line {
+.smallcaps-not > p.intro-graf::first-line,
+.annotation > p.data-field.title.intro-graf::first-line {
 	font-variant-caps: normal;
 }
 
