--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -3180,6 +3180,7 @@ sub {
 .subsup sub {
     position: relative;
     line-height: 1;
+    font-size: 0.6em;
 }
 
 /*  Inflation adjustments.
@@ -3193,13 +3194,15 @@ span.inflation-adjusted {
 }
 span.inflation-adjusted .subsup {
     align-items: flex-end;
-}
-span.inflation-adjusted .subsup sup,
-span.inflation-adjusted .subsup sub {
-    font-size: 0.6em;
-}
-span.inflation-adjusted .subsup {
     bottom: 0;
+}
+
+span.date-range {
+	white-space: nowrap;
+}
+span.date-range .subsup {
+	align-items: center;
+	bottom: 0;
 }
 
 
