Improve link bibliography list layout on mobile similarly to backlinks

--- a/css/default.css
+++ b/css/default.css
@@ -2132,7 +2132,8 @@ del {
 }
 
 @media all and (max-width: 649px) {
-	.backlinks-list .backlink-context {
+	.backlinks-list .backlink-context,
+	.link-bibliography-list .annotation-abstract {
 		margin-left: calc(-1 * var(--list-left-padding));
 	}
 }
