--- a/css/default.css
+++ b/css/default.css
@@ -2138,6 +2138,12 @@ del {
 	}
 }
 
+/*	Do not hyphenate “context” in backlinks lists; it looks bad.
+ */
+.backlink-source a:nth-of-type(2) {
+	hyphens: none;
+}
+
 
 /*************/
 /* DROPCAPS */
