--- a/css/default.css
+++ b/css/default.css
@@ -2063,6 +2063,7 @@ span.inflation-adjusted .subsup {
  */
 span.date-range {
 	white-space: nowrap;
+	font-variant-numeric: oldstyle-nums;
 }
 span.date-range .subsup {
 	align-items: center;
@@ -2097,13 +2098,13 @@ span.date-range > sub {
 
 /*	Hide date range metadata on /index.
  */
-body.index span.date-range sub {
+body.page-index span.date-range sub {
 	display: none;
 }
-body.index span.date-range .subsup {
+body.page-index span.date-range .subsup {
 	margin: 0;
 }
-body.index span.date-range .subsup sup {
+body.page-index span.date-range .subsup sup {
 	top: -0.15em;
 }
 
@@ -6374,7 +6375,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
     /*  No floating header on /index.
      */
-    body.index #floating-header {
+    body.page-index #floating-header {
         display: none;
     }
 }
