--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -2304,7 +2304,7 @@ body.special-halloween-dark #sidebar span.logo-image img {
 
 /*	Styles for /index
  */
-body.index.special-halloween-dark #sidebar a:hover {
+body.page-index.special-halloween-dark #sidebar a:hover {
 	color: var(--GW-blood-red);
 }
 
@@ -2479,7 +2479,7 @@ body[class*='special-christmas'] #sidebar span.logo-image img {
 
 /*	Styles for /index
  */
-body.index[class*='special-christmas'] #sidebar a:hover {
+body.page-index[class*='special-christmas'] #sidebar a:hover {
 	color: var(--GW-holly-leaf-green);
 }
 @charset "UTF-8";
