--- a/template/default.html
+++ b/template/default.html
@@ -127,7 +127,7 @@
               <span class="page-importance"><a href="/about#importance-tags" class="icon-not" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world.">importance</a>: <em>$importance$</em></span>
               $if(backlinks-yes)$<span class="backlinks"><a class="backlinks" href="#backlinks" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." data-link-icon="arrows-pointing-inwards-to-dot" data-link-icon-type="svg">backlinks</a></span>$endif$
               $if(similars-yes)$<span class="similars"><a class="similars" data-link-icon="≈" data-link-icon-type="text" href="#similars" title="Similar links for this link (by text embedding).">similar</a></span>$endif$
-              $if(linkbib-yes)$<span class="link-bibliography"><a href="#link-bibliography" class="icon-not" title="Bibliography of links cited in this page (forward citations).">bibliography</a></span>$endif$
+              $if(linkbib-yes)$<span class="link-bibliography"><a href="#link-bibliography" data-link-icon="bibliography" data-link-icon-type="svg" title="Bibliography of links cited in this page (forward citations).">bibliography</a></span>$endif$
           </div>
         </div>
         $endif$
@@ -135,7 +135,7 @@
         $body$
 
         $if(index)$ $else$
-        <noscript><div id="noscript-warning-footer" class="admonition error" title="Warning to NoScript Users"><div class="admonition-title"><p>[<strong>Error</strong>: JavaScript disabled.]</p></div> <p>[Backlinks, similar links, and the link-bibliography require JS enabled to load.]</p></div></noscript>
+        <noscript><div id="noscript-warning-footer" class="admonition error" title="Warning to NoScript Users"><div class="admonition-title"><p>[<strong>Error</strong>: JavaScript disabled.]</p></div> <p>[Backlinks, similar links, and the bibliography require JS enabled to load.]</p></div></noscript>
         $if(backlinks-yes)$<section id="backlinks-section" class="level1">
           <h1><a href="#backlinks-section" title="Link to section: § 'Backlinks'">Backlinks</a></h1>
           <a id="backlinks" href="/metadata/annotation/backlink/$escaped-url$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include-strict" data-link-icon="arrows-pointing-inwards-to-dot" data-link-icon-type="svg">[Backlinks (what links here)]</a>
@@ -146,7 +146,7 @@
           </section>$endif$
         $if(linkbib-yes)$<section id="link-bibliography-section" class="level1 collapse">
           <h1 class="collapse"><a href="#link-bibliography-section" title="Link to section: § 'Bibliography'">Bibliography</a></h1> <!-- NOTE: In theory, '.collapse' on a '<h1>' is redundant with the '<section>'; but added to parallel Pandoc-generated headers which set all attributes/classes on both. -->
-          <a id="link-bibliography" href="/metadata/annotation/link-bibliography/$escaped-url$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-even-when-collapsed link-bibliography">[Bibliography of links/references used in page]</a>$endif$
+          <a id="link-bibliography" href="/metadata/annotation/link-bibliography/$escaped-url$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-even-when-collapsed link-bibliography" data-link-icon="bibliography" data-link-icon-type="svg">[Bibliography of links/references used in page]</a>$endif$
         </section>$endif$
         </div> <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
 
