--- a/css/links.css
+++ b/css/links.css
@@ -480,6 +480,11 @@ a[data-link-icon='𝓡 𝐒'] .link-icon-hook::after { /* Rolling Stone */
     --link-icon-size: 0.55em;
 }
 
+a[data-link-icon='≈'] .link-icon-hook::after { /* similar-links (ALMOST EQUAL TO) */
+        --link-icon-offset-y: 0em;
+        --link-icon-size: 0.90em;
+}
+
 /****************************/
 /* Triple-letter 'tri' initials: too few for quad, but too big for
    regular font size/offset. Common with TLA orgs. */
@@ -1091,7 +1096,7 @@ a[data-link-icon='chicago-tribune'] .link-icon-hook::after { /* fraktur C */
 a[data-link-icon='tiktok'] .link-icon-hook::after {
     --link-icon-offset-x: 0.10em;
     --link-icon-offset-y: 0.15em;
-  --link-icon-size: 0.75em;
+    --link-icon-size: 0.75em;
 }
 
 /*=------------------=*/
