--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2486,18 +2486,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1720450359#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1723837325#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1720450359#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1723837325#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1720450359#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1723837325#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1720450359#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1723837325#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5590,7 +5590,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1720450359#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1723837325#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5771,7 +5771,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1720450359#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1723837325#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6219,7 +6219,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1720450359#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1723837325#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7172,7 +7172,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1720450359#question');
+    background-image: url('/static/img/icon/icons.svg?v=1723837325#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7382,7 +7382,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
 	content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-	background-image: url('/static/img/icon/icons.svg?v=1720450359#magnifying-glass-plus-light');
+	background-image: url('/static/img/icon/icons.svg?v=1723837325#magnifying-glass-plus-light');
 	background-size: 56px 56px;
 	background-origin: content-box;
 	background-repeat: no-repeat;
@@ -7764,7 +7764,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1720450359#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1723837325#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7843,7 +7843,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted > :first-child::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1720450359#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1723837325#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -8521,6 +8521,11 @@ a[data-link-icon='𝓡 𝐒'] .link-icon-hook::after { /* Rolling Stone */
     --link-icon-size: 0.55em;
 }
 
+a[data-link-icon='≈'] .link-icon-hook::after { /* similar-links (ALMOST EQUAL TO) */
+        --link-icon-offset-y: 0em;
+        --link-icon-size: 0.90em;
+}
+
 /****************************/
 /* Triple-letter 'tri' initials: too few for quad, but too big for
    regular font size/offset. Common with TLA orgs. */
@@ -9132,7 +9137,7 @@ a[data-link-icon='chicago-tribune'] .link-icon-hook::after { /* fraktur C */
 a[data-link-icon='tiktok'] .link-icon-hook::after {
     --link-icon-offset-x: 0.10em;
     --link-icon-offset-y: 0.15em;
-  --link-icon-size: 0.75em;
+    --link-icon-size: 0.75em;
 }
 
 /*=------------------=*/
