lb/bl: links.css/icons.svg: +css tweaks for bl; make central dot larger in bl; replace lb with much thicker SVG version which should be more legible as a link-icon <https://thenounproject.com/icon/list-4184262/>

--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2486,18 +2486,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1723837325#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1723907029#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1723837325#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1723907029#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1723837325#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1723907029#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1723837325#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1723907029#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5590,7 +5590,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1723837325#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1723907029#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5771,7 +5771,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1723837325#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1723907029#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6219,7 +6219,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1723837325#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1723907029#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7172,7 +7172,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1723837325#question');
+    background-image: url('/static/img/icon/icons.svg?v=1723907029#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7382,7 +7382,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
 	content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-	background-image: url('/static/img/icon/icons.svg?v=1723837325#magnifying-glass-plus-light');
+	background-image: url('/static/img/icon/icons.svg?v=1723907029#magnifying-glass-plus-light');
 	background-size: 56px 56px;
 	background-origin: content-box;
 	background-repeat: no-repeat;
@@ -7764,7 +7764,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1723837325#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1723907029#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7843,7 +7843,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted > :first-child::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1723837325#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1723907029#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -9139,6 +9139,19 @@ a[data-link-icon='tiktok'] .link-icon-hook::after {
     --link-icon-offset-y: 0.15em;
     --link-icon-size: 0.75em;
 }
+
+/* lb link-bibliography 'table of contents'
+a[data-link-icon='bibliography'] .link-icon-hook::after {
+    opacity: 1;
+    --link-icon-size: 0.8em;
+}
+ */
+
+a[data-link-icon='arrows-pointing-inwards-to-dot'] .link-icon-hook::after { /* bl backlinks 'implosion' */
+    opacity: 0.60;
+    --link-icon-size: 0.85em;
+}
+
 
 /*=------------------=*/
 /*= Wikipedia links. =*/
