--- a/css/links.css
+++ b/css/links.css
@@ -1099,6 +1099,19 @@ a[data-link-icon='tiktok'] .link-icon-hook::after {
     --link-icon-size: 0.75em;
 }
 
+/* lb link-bibliography 'table of contents'
+a[data-link-icon='bibliography'] .link-icon-hook::after {
+    opacity: 1;
+    --link-icon-size: 0.8em;
+}
+ */
+
+a[data-link-icon='arrows-pointing-inwards-to-dot'] .link-icon-hook::after { /* bl backlinks 'implosion' */
+    opacity: 0.60;
+    --link-icon-size: 0.85em;
+}
+
+
 /*=------------------=*/
 /*= Wikipedia links. =*/
 /*=------------------=*/
