--- a/css/links.css
+++ b/css/links.css
@@ -483,6 +483,7 @@ a[data-link-icon='𝓡 𝐒'] .link-icon-hook::after { /* Rolling Stone */
 a[data-link-icon='≈'] .link-icon-hook::after { /* similar-links (ALMOST EQUAL TO) */
         --link-icon-offset-y: 0em;
         --link-icon-size: 0.90em;
+        opacity: 0.9;
 }
 
 /****************************/
