--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -7841,7 +7841,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
     box-shadow: 0 0 0 0.1em var(--background-color);
 }
 
-.markdownBody div.block-context-highlighted > :first-child::before,
+.markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
     background-image: url('/static/img/icon/icons.svg#manicule-right');
