special-occasions.css: Christmas/Halloween: fix arabesque footer by removing <a> selector (per previous removal of navbar previous/next links)
seems to work on /lorem-halloween and lorem-christmas (light/dark) so just got with this for now...

--- a/css/special-occasions.css
+++ b/css/special-occasions.css
@@ -7,13 +7,13 @@
 /*=--------------=*/
 
 body.special-april-fools {
-	--GW-modified-serif-font-stack: "Great Primer Uncials", var(--GW-serif-font-stack);
+    --GW-modified-serif-font-stack: "Great Primer Uncials", var(--GW-serif-font-stack);
 
-	font-family: var(--GW-modified-serif-font-stack);
+    font-family: var(--GW-modified-serif-font-stack);
 }
 
 body.special-april-fools .marginnote {
-	font-family: var(--GW-modified-serif-font-stack);
+    font-family: var(--GW-modified-serif-font-stack);
 }
 
 /*=-----------=*/
@@ -52,7 +52,7 @@ body.special-halloween-dark {
     --GW-sidenote-highlight-box-shadow-color: var(--GW-blood-red-arterial);
     --GW-footnote-backlink-border-color: var(--GW-blood-red);
     --GW-footnote-backlink-border-hover-color: var(--GW-blood-red-arterial);
-	--GW-footnote-highlighted-border-color: var(--GW-blood-red);
+    --GW-footnote-highlighted-border-color: var(--GW-blood-red);
 
     --GW-sidenote-self-link-border-color: var(--GW-blood-red-arterial);
     --GW-sidenote-border-color: var(--GW-blood-red-arterial);
@@ -62,17 +62,17 @@ body.special-halloween-dark {
     --GW-collapse-disclosure-button-text-color: var(--GW-blood-red-dried);
     --GW-collapse-disclosure-button-text-hover-color: var(--GW-blood-red);
 
-	--GW-x-of-the-day-border-color: var(--GW-blood-red-dried);
+    --GW-x-of-the-day-border-color: var(--GW-blood-red-dried);
 
     --GW-page-toolbar-border-color: var(--GW-blood-red-dried);
     --GW-page-toolbar-control-button-color: var(--GW-blood-red);
 
-	--GW-bottom-ornament-line-color: var(--GW-blood-red-arterial);
+    --GW-bottom-ornament-line-color: var(--GW-blood-red-arterial);
 
     --GW-back-to-top-link-color: var(--GW-blood-red-dried);
     --GW-back-to-top-link-hover-color: var(--GW-blood-red-arterial);
 
-	--GW-floating-header-scroll-indicator-color: var(--GW-blood-red);
+    --GW-floating-header-scroll-indicator-color: var(--GW-blood-red);
 
     --GW-body-link-hover-color: var(--GW-blood-red-arterial);
 
@@ -87,10 +87,10 @@ body.special-halloween-dark .heading {
     --GW-body-text-color: var(--GW-blood-red);
     --GW-body-link-color: var(--GW-blood-red);
 
-	color: var(--GW-body-text-color);
+    color: var(--GW-body-text-color);
 }
 
-body.special-halloween-dark #navigation a {
+body.special-halloween-dark #navigation {
     color: var(--GW-blood-red);
 }
 body.special-halloween-dark #navigation a:hover {
@@ -98,39 +98,39 @@ body.special-halloween-dark #navigation a:hover {
 }
 
 body.special-halloween-dark #sidebar svg.logo-image {
-	visibility: hidden;
+    visibility: hidden;
 }
 body.special-halloween-dark #sidebar span.logo-image img {
-	filter: none;
+    filter: none;
 }
 @media all and (max-width: 649px) {
-	body.special-halloween-dark #sidebar span.logo-image img {
-		width: 133%;
-		position: relative;
-		left: -15%; top: -15%;
-	}
+    body.special-halloween-dark #sidebar span.logo-image img {
+        width: 133%;
+        position: relative;
+        left: -15%; top: -15%;
+    }
 }
 @media all and (min-width: 650px) {
-	@media all and (max-width: 1179px) {
-		body.special-halloween-dark #sidebar span.logo-image img {
-			width: 150%;
-			position: relative;
-			left: -30%; top: -15%;
-		}
-	}
-	@media all and (min-width: 1180px) {
-		body.special-halloween-dark #sidebar span.logo-image img {
-			width: 150%;
-			position: relative;
-			left: -30%; top: -10%;
-		}
-	}
+    @media all and (max-width: 1179px) {
+        body.special-halloween-dark #sidebar span.logo-image img {
+            width: 150%;
+            position: relative;
+            left: -30%; top: -15%;
+        }
+    }
+    @media all and (min-width: 1180px) {
+        body.special-halloween-dark #sidebar span.logo-image img {
+            width: 150%;
+            position: relative;
+            left: -30%; top: -10%;
+        }
+    }
 }
 
-/*	Styles for /index
+/*  Styles for /index
  */
 body.page-index.special-halloween-dark #sidebar a:hover {
-	color: var(--GW-blood-red);
+    color: var(--GW-blood-red);
 }
 
 /*=-----------=*/
@@ -138,23 +138,23 @@ body.page-index.special-halloween-dark #sidebar a:hover {
 /*=-----------=*/
 
 body.special-christmas-light {
-	--GW-santa-hat-red: #900;
-	--GW-holly-berry-red: #c00;
-	--GW-holly-leaf-green: #060;
-	--GW-mistletoe-green: #0c0;
-	--GW-pine-needle-green: #050;
-	--GW-fir-needle-green: #014421;
-	--GW-christmas-lights-gold: #ff0;
+    --GW-santa-hat-red: #900;
+    --GW-holly-berry-red: #c00;
+    --GW-holly-leaf-green: #060;
+    --GW-mistletoe-green: #0c0;
+    --GW-pine-needle-green: #050;
+    --GW-fir-needle-green: #014421;
+    --GW-christmas-lights-gold: #ff0;
 }
 
 body.special-christmas-dark {
-	--GW-santa-hat-red: #d00;
-	--GW-holly-berry-red: #f00;
-	--GW-holly-leaf-green: #0a3;
-	--GW-mistletoe-green: #005519;
-	--GW-pine-needle-green: #5eff66;
-	--GW-fir-needle-green: #a7cab6;
-	--GW-christmas-lights-gold: #996515;
+    --GW-santa-hat-red: #d00;
+    --GW-holly-berry-red: #f00;
+    --GW-holly-leaf-green: #0a3;
+    --GW-mistletoe-green: #005519;
+    --GW-pine-needle-green: #5eff66;
+    --GW-fir-needle-green: #a7cab6;
+    --GW-christmas-lights-gold: #996515;
 }
 
 body[class*='special-christmas'] {
@@ -185,7 +185,7 @@ body[class*='special-christmas'] {
     --GW-sidenote-highlight-box-shadow-color: var(--GW-holly-leaf-green);
     --GW-footnote-backlink-border-color: var(--GW-holly-leaf-green);
     --GW-footnote-backlink-border-hover-color: var(--GW-holly-berry-red);
-	--GW-footnote-highlighted-border-color: var(--GW-holly-leaf-green);
+    --GW-footnote-highlighted-border-color: var(--GW-holly-leaf-green);
 
     --GW-sidenote-self-link-border-color: var(--GW-holly-leaf-green);
     --GW-sidenote-border-color: var(--GW-holly-leaf-green);
@@ -195,20 +195,20 @@ body[class*='special-christmas'] {
     --GW-collapse-disclosure-button-text-color: var(--GW-holly-leaf-green);
     --GW-collapse-disclosure-button-text-hover-color: var(--GW-holly-berry-red);
 
-	--GW-x-of-the-day-border-color: var(--GW-holly-leaf-green);
+    --GW-x-of-the-day-border-color: var(--GW-holly-leaf-green);
 
     --GW-page-toolbar-border-color: var(--GW-holly-leaf-green);
     --GW-page-toolbar-control-button-color: var(--GW-holly-leaf-green);
 
-	--GW-bottom-ornament-line-color: var(--GW-holly-leaf-green);
+    --GW-bottom-ornament-line-color: var(--GW-holly-leaf-green);
 
     --GW-back-to-top-link-color: var(--GW-holly-leaf-green);
     --GW-back-to-top-link-hover-color: var(--GW-holly-berry-red);
 
-	--GW-floating-header-scroll-indicator-color: var(--GW-holly-leaf-green);
+    --GW-floating-header-scroll-indicator-color: var(--GW-holly-leaf-green);
 
-	--GW-body-link-color: var(--GW-pine-needle-green);
-	--GW-body-link-visited-color: var(--GW-fir-needle-green);
+    --GW-body-link-color: var(--GW-pine-needle-green);
+    --GW-body-link-visited-color: var(--GW-fir-needle-green);
     --GW-body-link-hover-color: var(--GW-holly-berry-red);
 
     --GW-highlighted-link-outline-color: var(--GW-santa-hat-red);
@@ -222,16 +222,16 @@ body[class*='special-christmas'] .heading {
     --GW-body-text-color: var(--GW-holly-leaf-green);
     --GW-body-link-color: var(--GW-holly-leaf-green);
 
-	color: var(--GW-body-text-color);
+    color: var(--GW-body-text-color);
 }
 
 body[class*='special-christmas'] header h1 {
     --GW-body-text-color: var(--GW-holly-leaf-green);
 
-	color: var(--GW-body-text-color);
+    color: var(--GW-body-text-color);
 }
 
-body[class*='special-christmas'] #navigation a {
+body[class*='special-christmas'] #navigation {
     color: var(--GW-santa-hat-red);
 }
 body[class*='special-christmas'] #navigation a:hover {
@@ -239,71 +239,71 @@ body[class*='special-christmas'] #navigation a:hover {
 }
 
 /********/
-/*	Glow.
+/*  Glow.
  */
- 
+
 body.special-christmas-light header h1 {
-	text-shadow:
-		0 0 2px var(--GW-christmas-lights-gold);
+    text-shadow:
+        0 0 2px var(--GW-christmas-lights-gold);
 }
 body.special-christmas-light .heading a,
 body.special-christmas-light p[class*='dropcap-'] span.dropcap,
 body.special-christmas-light #navigation a,
 body.special-christmas-light #sidebar a {
-	text-shadow:
-		0 0 1px var(--GW-christmas-lights-gold);
+    text-shadow:
+        0 0 1px var(--GW-christmas-lights-gold);
 }
 
 body.special-christmas-dark header h1 {
-	text-shadow:
-		0 0 6px var(--GW-body-background-color),
-		0 0 4px var(--GW-christmas-lights-gold);
+    text-shadow:
+        0 0 6px var(--GW-body-background-color),
+        0 0 4px var(--GW-christmas-lights-gold);
 }
 body.special-christmas-dark .heading a,
 body.special-christmas-dark p[class*='dropcap-'] span.dropcap,
 body.special-christmas-dark #navigation a,
 body.special-christmas-dark #sidebar a {
-	text-shadow:
-		0 0 2px var(--GW-body-background-color),
-		0 0 2px var(--GW-christmas-lights-gold);
+    text-shadow:
+        0 0 2px var(--GW-body-background-color),
+        0 0 2px var(--GW-christmas-lights-gold);
 }
 
 /********/
-/*	Logo.
+/*  Logo.
  */
- 
+
 body[class*='special-christmas'] #sidebar svg.logo-image {
-	visibility: hidden;
+    visibility: hidden;
 }
 body[class*='special-christmas'] #sidebar span.logo-image img {
-	filter: none;
+    filter: none;
 }
 @media all and (max-width: 649px) {
-	body[class*='special-christmas'] #sidebar span.logo-image img {
-		width: 133%;
-		position: relative;
-		left: -15%; top: -15%;
-	}
+    body[class*='special-christmas'] #sidebar span.logo-image img {
+        width: 133%;
+        position: relative;
+        left: -15%; top: -15%;
+    }
 }
 @media all and (min-width: 650px) {
-	@media all and (max-width: 1179px) {
-		body[class*='special-christmas'] #sidebar span.logo-image img {
-			width: 150%;
-			position: relative;
-			left: -30%; top: -15%;
-		}
-	}
-	@media all and (min-width: 1180px) {
-		body[class*='special-christmas'] #sidebar span.logo-image img {
-			width: 125%;
-			position: relative;
-			left: -10%; top: -10%;
-		}
-	}
+    @media all and (max-width: 1179px) {
+        body[class*='special-christmas'] #sidebar span.logo-image img {
+            width: 150%;
+            position: relative;
+            left: -30%; top: -15%;
+        }
+    }
+    @media all and (min-width: 1180px) {
+        body[class*='special-christmas'] #sidebar span.logo-image img {
+            width: 125%;
+            position: relative;
+            left: -10%; top: -10%;
+        }
+    }
 }
 
-/*	Styles for /index
+/*  Styles for /index
  */
 body.page-index[class*='special-christmas'] #sidebar a:hover {
-	color: var(--GW-holly-leaf-green);
+    color: var(--GW-holly-leaf-green);
 }
